# mcp-memory-bank

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  server.py  smithery.yaml
guides/: structure.py
src/mcp_memory_bank/: main.py
src/mcp_memory_bank/guides/: structure.py
src/mcp_memory_bank/templates/: memory_bank_instructions.py  roadmap.py
templates/: memory_bank_instructions.py
